2001-06-01  Tom Tromey  <tromey@redhat.com>

	* tests/Makefile.am (XFAIL_TESTS): Added ltdeps.test.
	(TESTS): Likewise.
	* tests/ltdeps.test: New file.  Report from Lars J. Aas.

2001-05-31  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Alternative): New node.
	(Macros): Use new name for gcc.
	(Java Support): Likewise.
	(Dependencies): Rewrote.
	(Invoking Automake): (Re-)document -i, --ignore-deps, and
	--include-deps.

	* automake.texi (Top level): Removed erroneous spaces.  Documented
	MAKE and MAKEFLAGS.

2001-05-29  Tom Tromey  <tromey@redhat.com>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Allow any AM_*FLAGS variable.

	* automake.texi (Include): Rewrote.
	(Suffixes): Remove Java example.
	(Java): Added more explanation.  Document variables.
	(Uniform): Mention JAVA as a primary.
	(Python): Updated for new Python support.
	(Sources): Added a weak example.

	* lib/am/java.am (class%DIR%.stamp): Use AM_JAVACFLAGS.

	* automake.texi (A Program): Mention `check' prefix.
	(Program and Library Variables): New node.
	(Texinfo): Document UPDATED-MONTH, MAKEINFOFLAGS, and
	AM_MAKEINFOFLAGS.
	(etags): Mention per-program flags.
	(Tests): Document AM_RUNTESTFLAGS; added sectioning; more
	updates.

	* lib/am/texinfos.am (.PHONY): Always list uninstall-info-am and
	install-info-am.

2001-05-28  Tom Tromey  <tromey@redhat.com>

	* m4/Makefile.am (MAINT_CHARSET): Removed.
	* Makefile.am (MAINT_CHARSET): Removed.
	* automake.in (maint_charset, dist_charset): Removed.
	(local_maint_charset): Removed.
	(initialize_per_input): Don't use maint_charset.
	(handle_dist): Don't compute maint_charset or check DIST_CHARSET.

	* lib/am/texibuild.am (.%SUFFIX%.info): Use MAKEINFOFLAGS and
	AM_MAKEINFOFLAGS.
	(.%SUFFIX%.dvi): Likewise.
	(.%SUFFIX%): Likewise.

2001-05-27  Tom Tromey  <tromey@redhat.com>

	* automake.in (handle_multilib): Only add multilib support code at
	top level.
	* lib/am/multilib.am: Handle invocation of *-multi targets