@@ -269,9 +269,6 @@ Alex Hornby
   (maybe doesn't matter since people who even know about
   maintainer-clean already have a clue)
 
-* There are probably more bugs in variable_conditions_sub along
-  the lines of the one that caused cond4.test to fail.
-
 * reintroduce AM_FUNC_FNMATCH which sets LIBOBJS
   Then have automake know about fnmatch.h.
     [ probably should wait for autoconf to get right functionality ]
