@@ -1,3 +1,12 @@
+2001-06-02  Tom Tromey  <tromey@redhat.com>
+
+	* automake.in (variable_conditions_sub): Move parent-only code
+	from here...
+	(variable_conditions): ... to here.
+	(variable_conditions_sub): Include this variable's conditions in
+	the resulting condition list.
+	* tests/Makefile.am (XFAIL_TESTS): Removed ltdeps.test.
+
 2001-06-01  Tom Tromey  <tromey@redhat.com>
 
 	* tests/Makefile.am (XFAIL_TESTS): Added ltdeps.test.
